--- a/test_manual.yml
+++ b/test_manual.yml
@@ -1,15 +1,19 @@
-import sys
-import datetime
+name: Test Parkalot Bot
 
-# --- Target Date ---
-if '--test' in sys.argv:
-    target_date = datetime.date.today() + datetime.timedelta(days=1)
-else:
-    target_date = datetime.date.today() + datetime.timedelta(days=14)
+on:
+  workflow_dispatch:  # Allows manual trigger from the GitHub Actions tab
 
-target_day = target_date.strftime("%A")
-target_day_num = target_date.strftime("%-d")
-target_month = target_date.strftime("%B")
-target_label = f"{target_day} {target_day_num} {target_month}"
+jobs:
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-print(f"Booking attempt for {target_label}...")
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.11
+
+      - name: Run script in test mode
+        run: python parkalot_bot.py --test
