--- a/test_manual.yml
+++ b/test_manual.yml
@@ -1,29 +1,14 @@
-name: Parkalot Test Run
+name: Parkalot Booking Bot
 
 on:
   workflow_dispatch:
 
 jobs:
-  run-test:
+  test:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.9'
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install selenium
-
-      - name: Run Parkalot Bot (Test Mode)
-        env:
-          PARKALOT_EMAIL: ${{ secrets.PARKALOT_EMAIL }}
-          PARKALOT_PASSWORD: ${{ secrets.PARKALOT_PASSWORD }}
-        run: |
-          python parkalot_bot.py --test
+      - name: Run a test
+        run: echo "GitHub Actions is working!"
