--- a/.github/workflows/parkalot.yml
+++ b/.github/workflows/parkalot.yml
@@ -1,34 +1,36 @@
-name: Parkalot Booking Bot
+import datetime
+import os
+import time
+from selenium import webdriver
+from selenium.webdriver.common.by import By
+from selenium.webdriver.chrome.options import Options
+from selenium.webdriver.support.ui import WebDriverWait
+from selenium.webdriver.support import expected_conditions as EC
 
-on:
-  workflow_dispatch:
+print("Starting Parkalot Booking Bot...")
 
-jobs:
-  booking:
-    runs-on: ubuntu-latest
+# --- Credentials ---
+PARKALOT_EMAIL = os.getenv("PARKALOT_EMAIL")
+PARKALOT_PASSWORD = os.getenv("PARKALOT_PASSWORD")
+print(f"Loaded email: {PARKALOT_EMAIL is not None}, password: {PARKALOT_PASSWORD is not None}")
 
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+# --- Calculate Target Date ---
+target_date = datetime.date.today() + datetime.timedelta(days=14)
+target_day = target_date.strftime("%A")
+target_day_num = target_date.strftime("%-d")
+target_month = target_date.strftime("%B")
+target_label = f"{target_day} {target_day_num} {target_month}"
+print(f"Booking attempt for {target_label}...")
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.9'
+# --- Selenium Setup ---
+options = Options()
+options.add_argument("--headless")
+options.add_argument("--no-sandbox")
+options.add_argument("--disable-dev-shm-usage")
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install selenium webdriver-manager
-
-      - name: Install Chrome
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y google-chrome-stable
-
-      - name: Run booking script
-        env:
-          PARKALOT_EMAIL: ${{ secrets.PARKALOT_EMAIL }}
-          PARKALOT_PASSWORD: ${{ secrets.PARKALOT_PASSWORD }}
-        run: |
-          python parkalot_bot.py
+try:
+    driver = webdriver.Chrome(options=options)
+    print("Chrome started successfully...")
+except Exception as e:
+    print(f"Error starting Chrome: {e}")
+    exit(1)
