--- a/.github/workflows/parkalot.yml
+++ b/.github/workflows/parkalot.yml
@@ -16,17 +16,11 @@ jobs:
         with:
           python-version: '3.9'
 
-      - name: Install Chrome & ChromeDriver
+      - name: Install Chrome & Chromedriver
         run: |
-          sudo apt update
-          sudo apt install -y wget unzip curl
-          wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
-          sudo apt install -y ./google-chrome-stable_current_amd64.deb
-          DRIVER_VERSION=$(curl -s https://chromedriver.storage.googleapis.com/LATEST_RELEASE)
-          wget -q "https://chromedriver.storage.googleapis.com/${DRIVER_VERSION}/chromedriver_linux64.zip"
-          unzip chromedriver_linux64.zip
-          sudo mv chromedriver /usr/local/bin/
-          sudo chmod +x /usr/local/bin/chromedriver
+          sudo apt-get update
+          sudo apt-get install -y chromium-browser chromium-chromedriver
+          sudo ln -s /usr/bin/chromedriver /usr/local/bin/chromedriver
 
       - name: Install Python dependencies
         run: pip install selenium
