--- a/test_manual.yml
+++ b/test_manual.yml
@@ -10,16 +10,5 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.9'
-
-      - name: Install dependencies
-        run: pip install selenium
-
-      - name: Run test booking script
-        env:
-          PARKALOT_EMAIL: ${{ secrets.PARKALOT_EMAIL }}
-          PARKALOT_PASSWORD: ${{ secrets.PARKALOT_PASSWORD }}
-        run: python test_booking.py
+      - name: Print Hello
+        run: echo "Hello from GitHub Actions!"
