--- a/.github/workflows/test_manual.yml
+++ b/.github/workflows/test_manual.yml
@@ -10,5 +10,15 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Print Hello
-        run: echo "Hello from GitHub Actions!"
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.9'
+
+      - name: Install dependencies
+        run: pip install selenium
+
+      - name: Run Parkalot Bot for Sunday
+        env:
+          PARKALOT_EMAIL: ${{ secrets.PARKALOT_EMAIL }}
+          PARKALOT_PASSWORD: ${{ secrets.PARKALOT_PASSWORD
