--- a/.github/workflows/test_manual.yml
+++ b/.github/workflows/test_manual.yml
@@ -1,15 +1,14 @@
-import sys
-import datetime
+name: Parkalot Test Run
 
-if '--test' in sys.argv:
-    # Find the next Sunday
-    today = datetime.date.today()
-    days_ahead = 6 - today.weekday()  # Sunday = 6
-    if days_ahead <= 0:
-        days_ahead += 7
-    target_date = today + datetime.timedelta(days=days_ahead)
-else:
-    target_date = datetime.date.today() + datetime.timedelta(days=14)
+on:
+  workflow_dispatch:
 
-target_label = target_date.strftime("%A %d %B")
-print(f"Booking attempt for {target_label}...")
+jobs:
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Test Echo
+        run: echo "Manual workflow trigger is working!"
