--- a/.github/workflows/test_manual.yml
+++ b/.github/workflows/test_manual.yml
@@ -4,11 +4,25 @@ on:
   workflow_dispatch:
 
 jobs:
-  test:
+  test-booking:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Test Echo
-        run: echo "Manual workflow trigger is working!"
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.9'
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install selenium
+
+      - name: Run booking for Sunday
+        env:
+          PARKALOT_EMAIL: ${{ secrets.PARKALOT_EMAIL }}
+          PARKALOT_PASSWORD: ${{ secrets.PARKALOT_PASSWORD }}
+        run: |
+          python your_script.py
