test_manual.yml

--- a/.github/workflows/test_manual.yml
+++ b/.github/workflows/test_manual.yml
@@ -24,9 +24,23 @@ jobs:
           python -m pip install --upgrade pip
           pip install selenium
 
-      # Step 4: Run booking bot
+      # Step 4: Install Chrome & ChromeDriver
+      - name: Install Chrome and ChromeDriver
+        run: |
+          sudo apt update
+          sudo apt install -y wget unzip
+          wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+          sudo apt install -y ./google-chrome-stable_current_amd64.deb
+          CHROME_VERSION=$(google-chrome --version | grep -oP '\d+\.\d+\.\d+')
+          DRIVER_VERSION=$(curl -s "https://chromedriver.storage.googleapis.com/LATEST_RELEASE")
+          wget "https://chromedriver.storage.googleapis.com/$DRIVER_VERSION/chromedriver_linux64.zip"
+          unzip chromedriver_linux64.zip
+          sudo mv chromedriver /usr/local/bin/
+          sudo chmod +x /usr/local/bin/chromedriver
+
+      # Step 5: Run booking bot
       - name: Run booking bot
         env:
           PARKALOT_EMAIL: ${{ secrets.PARKALOT_EMAIL }}
           PARKALOT_PASSWORD: ${{ secrets.PARKALOT_PASSWORD }}
-        run: python booking_bot.py
+        run: python "python booking_bot.py"
