--- a/.github/workflows/test_manual.yml
+++ b/.github/workflows/test_manual.yml
@@ -24,23 +24,19 @@ jobs:
           python -m pip install --upgrade pip
           pip install selenium
 
-      # Step 4: Install Chrome & ChromeDriver
+      # Step 4: Install Chrome and ChromeDriver
       - name: Install Chrome and ChromeDriver
         run: |
-          sudo apt update
-          sudo apt install -y wget unzip
-          wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
-          sudo apt install -y ./google-chrome-stable_current_amd64.deb
+          sudo apt-get update
+          sudo apt-get install -y google-chrome-stable
           CHROME_VERSION=$(google-chrome --version | grep -oP '\d+\.\d+\.\d+')
-          DRIVER_VERSION=$(curl -s "https://chromedriver.storage.googleapis.com/LATEST_RELEASE")
-          wget "https://chromedriver.storage.googleapis.com/$DRIVER_VERSION/chromedriver_linux64.zip"
+          wget -N https://chromedriver.storage.googleapis.com/LATEST_RELEASE_${CHROME_VERSION%.*} -O LATEST_RELEASE
+          DRIVER_VERSION=$(cat LATEST_RELEASE)
+          wget https://chromedriver.storage.googleapis.com/$DRIVER_VERSION/chromedriver_linux64.zip
           unzip chromedriver_linux64.zip
           sudo mv chromedriver /usr/local/bin/
           sudo chmod +x /usr/local/bin/chromedriver
 
-      # Step 5: Run booking bot
+      # Step 5: Run your booking bot script
       - name: Run booking bot
-        env:
-          PARKALOT_EMAIL: ${{ secrets.PARKALOT_EMAIL }}
-          PARKALOT_PASSWORD: ${{ secrets.PARKALOT_PASSWORD }}
-        run: python "python booking_bot.py"
+        run: python booking_bot.py
