--- a/.github/workflows/test_manual.yml
+++ b/.github/workflows/test_manual.yml
@@ -24,18 +24,12 @@ jobs:
           python -m pip install --upgrade pip
           pip install selenium
 
-      # Step 4: Install Chrome and ChromeDriver
+      # Step 4: Install Chrome and ChromeDriver via apt
       - name: Install Chrome and ChromeDriver
         run: |
           sudo apt-get update
-          sudo apt-get install -y google-chrome-stable
-          CHROME_VERSION=$(google-chrome --version | grep -oP '\d+\.\d+\.\d+')
-          wget -N https://chromedriver.storage.googleapis.com/LATEST_RELEASE_${CHROME_VERSION%.*} -O LATEST_RELEASE
-          DRIVER_VERSION=$(cat LATEST_RELEASE)
-          wget https://chromedriver.storage.googleapis.com/$DRIVER_VERSION/chromedriver_linux64.zip
-          unzip chromedriver_linux64.zip
-          sudo mv chromedriver /usr/local/bin/
-          sudo chmod +x /usr/local/bin/chromedriver
+          sudo apt-get install -y chromium-browser chromium-chromedriver
+          sudo ln -s /usr/lib/chromium-browser/chromedriver /usr/local/bin/chromedriver
 
       # Step 5: Run your booking bot script
       - name: Run booking bot
